--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".activity.ViewPagerActivity" />
         <activity android:name=".activity.ViewDay04Activity" />
         <activity android:name=".activity.ViewDay05Activity" />
-        <activity android:name=".activity.ViewDay06Activity"></activity>
+        <activity android:name=".activity.ViewDay06Activity" />
+        <activity android:name=".activity.ViewDay07Activity"></activity>
     </application>
 
 </manifest>
