--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         <activity android:name=".activity.ViewDay04Activity" />
         <activity android:name=".activity.ViewDay05Activity" />
         <activity android:name=".activity.ViewDay06Activity" />
-        <activity android:name=".activity.ViewDay07Activity"></activity>
+        <activity android:name=".activity.ViewDay07Activity" />
+        <activity android:name=".activity.ViewDay08Activity"></activity>
     </application>
 
 </manifest>
