--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".activity.ViewDay09Activity" />
         <activity android:name=".activity.ViewDay10Activity" />
         <activity android:name=".activity.ViewDay11Activity" />
-        <activity android:name=".activity.ViewDay12Activity"></activity>
+        <activity android:name=".activity.ViewDay12Activity" />
+        <activity android:name=".activity.PointActivity"></activity>
     </application>
 
 </manifest>
