--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,11 @@
         <activity android:name=".activity.ViewDay10Activity" />
         <activity android:name=".activity.ViewDay11Activity" />
         <activity android:name=".activity.ViewDay12Activity" />
-        <activity android:name=".activity.PointActivity"></activity>
+        <activity android:name=".activity.PointActivity" />
+        <activity android:name=".activity.MeterialDesignActivity" />
+        <activity android:name=".activity.LoadingViewActivity" />
+        <activity android:name=".activity.QQToolbarActivity" />
+        <activity android:name=".activity.BehaviorActivity"></activity>
     </application>
 
 </manifest>
