通用adapter 自定义recycleview 自定义banner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".activity.MeterialDesignActivity" />
         <activity android:name=".activity.LoadingViewActivity" />
         <activity android:name=".activity.QQToolbarActivity" />
-        <activity android:name=".activity.BehaviorActivity"></activity>
+        <activity android:name=".activity.BehaviorActivity" />
+        <activity android:name=".activity.RecycleViewActivity"></activity>
     </application>
 
 </manifest>
