1.酷狗是差动画 2.qq消息拖拽 3.花树直播点赞

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,13 @@
         <activity android:name=".activity.LoadingViewActivity" />
         <activity android:name=".activity.QQToolbarActivity" />
         <activity android:name=".activity.BehaviorActivity" />
-        <activity android:name=".activity.RecycleViewActivity"></activity>
+        <activity android:name=".activity.RecycleViewActivity" />
+        <activity android:name=".activity.DragItemAnimatorActivity" />
+        <activity android:name=".activity.ViewDay13Activity" />
+        <activity android:name=".activity.ViewDay14Activity" />
+        <activity android:name=".activity.ViewDay15Activity" />
+        <activity android:name=".activity.ViewDay16Activity"></activity>
+        <activity android:name=".activity.ViewDay17Activity"></activity>
     </application>
 
 </manifest>
