--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.android.support:design:25+'
     compile 'com.android.support:cardview-v7:25+'
+    compile 'com.android.support:percent:25.3.1'
+
 
 
 }
