--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".activity.ViewDay15Activity" />
         <activity android:name=".activity.ViewDay16Activity"></activity>
         <activity android:name=".activity.ViewDay17Activity"></activity>
+        <activity android:name=".activity.ViewDay18Activity"></activity>
     </application>
 
 </manifest>
